# projects/automat-api/src/API/models/user-admi-borrow-dto.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface UserAdmiBorrowDto {
+  borrowDate?: string;
+  id?: number;
+  itemname?: null | string;
+  returned?: boolean;
+}
